assets/css/style.css
:root {
    --blue: rgb(65, 107, 186);
  }

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Monospace;
     
}

body {
    min-height: 100vh;
    background-color: black;
    color: yellowgreen;  
}

p {
    font-size: 12px;
    padding-bottom: 5px;
}

li {
    list-style: none;
}

button {
    outline: none;
    color:rgb(213, 255, 3);
    background-color: var(--blue);
    font-size: 14px;
    border-radius: 5px;
    border-style: none;
    padding: 2px;
}

button:hover {
    color: rgb(213, 255, 3);
    background-color: black;
}

/* Top Bar Styling */
.top-bar {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    white-space: nowrap;
    padding: 5px;
}

/* Outer Container Styling */
.outer-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

/* Inner Container Styling */
.inner-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: var(--blue);
    height: 55%;
    width: 50%;
}

/* Quiz Intro Screen Styling */
.quiz-intro-screen {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    background-color: var(--blue);
    width: 100%;
    padding: 5%;
}

/* Questions Screen Styling */
.questions-screen {
    display: none;
    flex-direction: column;
    align-items: flex-start;
    margin-left: 10vh;
    margin-right: 10vh;
    text-align: center;
    background-color: var(--blue);
    width: 100%;
    padding: 5%;
}

.questions-screen ul li {
    text-align: left;
}

/* Quiz Finished Screen Styling */
.quiz-finished-screen {
    display: none;
    flex-direction: column;
    align-items: center;
    margin-left: 10vh;
    margin-right: 10vh;
    text-align: center;
    background-color: var(--blue);
    width: 100%;
    padding: 5%;
}

/* High Scores Screen Styling */
.high-scores-screen {
    display: none;
    flex-direction: column;
    align-items: center;
    margin-left: 10vh;
    margin-right: 10vh;
    text-align: center;
    background-color: var(--blue);
    width: 100%;
    padding: 5%;
}

#scoreboard {
    display: flex;
    flex-direction: column;
    justify-content: center;
    color: white;
    width: 100%;
    padding: 5%;
}



/************ media queries ************/
@media screen and (max-width: 992px) {
    
  }
  
@media screen and (max-width: 768px) {
 
  }

@media screen and (max-width: 576px) {
    .cards {
        width: 100%;
    }
  }

